// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress/> render 1`] = `
<div
  className="progress"
>
  <div
    className="progress-barberpole"
    style={
      Object {
        "width": "NaN%",
      }
    }
  />
  <div
    className="progress-text"
  >
    NaN
    %
  </div>
</div>
`;

exports[`<Progress/> rounds 0.415 to 42%  1`] = `
<div
  className="progress"
>
  <div
    className="progress-barberpole"
    style={
      Object {
        "width": "42%",
      }
    }
  />
  <div
    className="progress-text"
  >
    42
    %
  </div>
</div>
`;
